Style new header

--- a/index.html
+++ b/index.html
@@ -21,9 +21,11 @@
         <label></label>
     </template>
 
-    <h1><a href="/">charact<span>.</span>rs</a></h1>
     <div id="app">
-        <fieldset id="displayRadioFieldSet"></fieldset>
+        <header>
+            <h1><a href="/">charact<span>.</span>rs</a></h1>
+            <fieldset id="displayRadioFieldSet"></fieldset>
+        </header>
     </div>
     <div id="footer"><p>charact.rs &copy; 2024&ndash; <a href="https://balintmagyar.com">Bálint Magyar</a></p></div>
 
